--- a/CTCTWrapper/CTCTWrapper.UnitTest/App.config
+++ b/CTCTWrapper/CTCTWrapper.UnitTest/App.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="APIKey" value="APIKey"/>
+    <add key="APIKey" value=""/>
     <add key="RedirectURL" value="http://www.constantcontact.com/index.jsp"/>
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
