--- a/CTCTWrapper/app.config
+++ b/CTCTWrapper/app.config
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <add key="APIKey" value="APIkey"/>
     <add key="RedirectURL" value="http://www.constantcontact.com/index.jsp"/>
     <add key="ClientSecret" value="API_key_secret"/>
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
